--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 HELP.md
 .gradle
 build/
+src/main/resources/static/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**
 !**/src/test/**
@@ -27,6 +28,7 @@ out/
 /dist/
 /nbdist/
 /.nb-gradle/
+/src/main/resources/static/
 
 ### VS Code ###
 .vscode/
