Added flyway configurations for database initialisation and migration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,25 @@
 security.ignored=/**
+spring.datasource.driverClassName = org.postgresql.Driver
+spring.datasource.url = jdbc:postgresql://localhost:5432/sdlc
+spring.datasource.username = accelerate
+spring.datasource.password = accelerate
+spring.datasource.testOnBorrow = true
+spring.datasource.testWhileIdle = true
+spring.datasource.timeBetweenEvictionRunsMillis = 60000
+spring.datasource.minEvictableIdleTimeMillis = 30000
+spring.datasource.max-active = 15
+spring.datasource.max-idle = 10
+spring.datasource.max-wait = 8000
+# debug=true
+
+flyway.url=jdbc:postgresql://localhost:5432/sdlc
+flyway.driver=org.postgresql.Driver
+flyway.user=accelerate
+flyway.password=accelerate
+flyway.schemas=sdlc
+flyway.table=schema_history
+flyway.sqlMigrationPrefix=V
+flyway.sqlMigrationSeparator=__
+flyway.sqlMigrationSuffixes=.sql
+flyway.validateOnMigrate=true
+
