--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 plugins {
 	id 'org.springframework.boot' version '2.1.8.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
+	id "org.flywaydb.flyway" version "5.2.4"
 	id 'java'
-    id 'war'
+	id 'war'
 }
 
 group = 'com.accelerate'
@@ -26,6 +27,8 @@ repositories {
 dependencies {
 //	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.flywaydb:flyway-core:5.2.4'
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.session:spring-session-core'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -34,5 +37,6 @@ dependencies {
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	compile group: 'javax.el', name: 'javax.el-api', version: '3.0.0'
+//	compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure', version: '2.1.9.RELEASE'
 //	testImplementation 'org.springframework.security:spring-security-test'
 }
