--- a/build.gradle
+++ b/build.gradle
@@ -25,10 +25,11 @@ repositories {
 }
 
 dependencies {
-//	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.flywaydb:flyway-core:5.2.4'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	implementation 'org.springframework.session:spring-session-data-redis'
 	implementation 'org.springframework.session:spring-session-core'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -37,6 +38,10 @@ dependencies {
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	compile group: 'javax.el', name: 'javax.el-api', version: '3.0.0'
-//	compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure', version: '2.1.9.RELEASE'
-//	testImplementation 'org.springframework.security:spring-security-test'
+	compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure', version: '2.1.9.RELEASE'
+//	compile group: 'org.springframework.session', name: 'spring-session', version: '1.3.5.RELEASE'
+//	compile group: 'org.springframework.session', name: 'spring-session-data-redis', version: '1.0.0.RELEASE'
+	compile group: 'org.springframework', name: 'spring-jdbc', version: '5.2.0.RELEASE'
+	compile group: 'redis.clients', name: 'jedis', version: '2.9.0'
+	testImplementation 'org.springframework.security:spring-security-test'
 }
