--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-security.ignored=/**
+#security.ignored=/**
 spring.datasource.driverClassName = org.postgresql.Driver
 spring.datasource.url = jdbc:postgresql://localhost:5432/sdlc
 spring.datasource.username = accelerate
@@ -10,6 +10,13 @@ spring.datasource.minEvictableIdleTimeMillis = 30000
 spring.datasource.max-active = 15
 spring.datasource.max-idle = 10
 spring.datasource.max-wait = 8000
+spring.session.store-type=redis
+spring.session.redis.flush-mode=on-save
+spring.redis.host=localhost
+spring.redis.password=
+spring.redis.port=6379
+server.servlet.session.timeout=3600
+
 # debug=true
 
 spring.flyway.schemas=sdlc
