--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,8 @@ configurations {
 	runtimeClasspath {
 		extendsFrom developmentOnly
 	}
-//	compileOnly {
-//		extendsFrom annotationProcessor
+//	all {
+//		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
 //	}
 }
 
@@ -27,21 +27,19 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.flywaydb:flyway-core:5.2.4'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-	implementation 'org.springframework.session:spring-session-data-redis'
-	implementation 'org.springframework.session:spring-session-core'
+//	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+	implementation 'org.springframework.boot:spring-boot-starter-logging'
+	implementation 'org.springframework.boot:spring-boot-autoconfigure'
+//	implementation 'org.springframework.session:spring-session-core'
+	implementation 'org.springframework.session:spring-session-jdbc'
+	implementation 'org.flywaydb:flyway-core:5.2.4'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.postgresql:postgresql'
-//	annotationProcessor 'org.projectlombok:lombok'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	compile group: 'javax.el', name: 'javax.el-api', version: '3.0.0'
-	compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure', version: '2.1.9.RELEASE'
 //	compile group: 'org.springframework.session', name: 'spring-session', version: '1.3.5.RELEASE'
-//	compile group: 'org.springframework.session', name: 'spring-session-data-redis', version: '1.0.0.RELEASE'
-	compile group: 'org.springframework', name: 'spring-jdbc', version: '5.2.0.RELEASE'
 	compile group: 'redis.clients', name: 'jedis', version: '2.9.0'
-	testImplementation 'org.springframework.security:spring-security-test'
 }
