--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,25 @@
-#security.ignored=/**
+#Spring database configurations
+
 spring.datasource.driverClassName = org.postgresql.Driver
-spring.datasource.url = jdbc:postgresql://localhost:5432/sdlc
+spring.datasource.url = jdbc:postgresql://localhost:5432/sdlc?currentSchema=sdlc
 spring.datasource.username = accelerate
 spring.datasource.password = accelerate
-spring.datasource.testOnBorrow = true
-spring.datasource.testWhileIdle = true
-spring.datasource.timeBetweenEvictionRunsMillis = 60000
-spring.datasource.minEvictableIdleTimeMillis = 30000
-spring.datasource.max-active = 15
-spring.datasource.max-idle = 10
-spring.datasource.max-wait = 8000
-spring.session.store-type=redis
-spring.session.redis.flush-mode=on-save
-spring.redis.host=localhost
-spring.redis.password=
-spring.redis.port=6379
-server.servlet.session.timeout=3600
+#spring.security.user.name=admin
+#spring.security.user.password=admin
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=never
+spring.session.jdbc.table-name=SPRING_SESSION
+server.servlet.session.timeout=30m
 
-# debug=true
+#Spring Log Configurations
+
+#logging.config=classpath:logback-spring.xml
+logging.level.root=INFO
+logging.level.com.accelerate.sdlc=INFO
+logging.file=accelerate.log
+#logging.path=./logs
+
+#FlyWay Migration
 
 spring.flyway.schemas=sdlc
 spring.flyway.table=acc_schema_history
