Updated package structure and session handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,9 @@ spring.session.jdbc.initialize-schema=never
 spring.session.jdbc.table-name=SPRING_SESSION
 server.servlet.session.timeout=30m
 
+#SDLC configuration
+sdlc.security.clearSessionOnRestart=true
+
 #Spring Log Configurations
 
 #logging.config=classpath:logback-spring.xml
