--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=never
 spring.session.jdbc.table-name=SPRING_SESSION
 server.servlet.session.timeout=30m
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html 
 
 #SDLC configuration
 sdlc.security.clearSessionOnRestart=true
