--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,13 @@ spring.datasource.driverClassName = org.postgresql.Driver
 spring.datasource.url = jdbc:postgresql://localhost:5432/sdlc?currentSchema=sdlc
 spring.datasource.username = accelerate
 spring.datasource.password = accelerate
+#spring.datasource.hikari.driver-class-name = org.postgresql.Driver
+#spring.datasource.hikari.jdbc-url = jdbc:postgresql://localhost:5432/sdlc?currentSchema=sdlc
+#spring.datasource.hikari.username = accelerate
+#spring.datasource.hikari.password = accelerate
+#spring.datasource.hikari.schema = sdlc
+#spring.datasource.hikari.connection-timeout = 1500
+#spring.datasource.hikari.maximum-pool-size = 75
 #spring.security.user.name=admin
 #spring.security.user.password=admin
 spring.session.store-type=jdbc
