Added the update status and details functionality for personnal task, Also handled connection pool issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.datasource.password = accelerate
 #spring.datasource.hikari.username = accelerate
 #spring.datasource.hikari.password = accelerate
 #spring.datasource.hikari.schema = sdlc
-#spring.datasource.hikari.connection-timeout = 1500
-#spring.datasource.hikari.maximum-pool-size = 75
+#spring.datasource.hikari.connection-timeout = 30000
+spring.datasource.hikari.maximum-pool-size = 75
 #spring.security.user.name=admin
 #spring.security.user.password=admin
 spring.session.store-type=jdbc
